# ERP

./: .gitignore  README.md  flow.drawio  pyproject.toml
raya_erp/: hooks.py  modules.txt  patches.txt
raya_erp/custom/: __init__.py  create_fileds.py
raya_erp/fixtures/: custom_field.json  property_setter.json
raya_erp/raya_erp/customization/currency_exchange/: currency_exchange.js  currency_exchange.py
raya_erp/raya_erp/customization/item/: item.py
raya_erp/raya_erp/customization/item_attribute/: item_attribute.py
raya_erp/raya_erp/customization/item_price/: item_price.py
raya_erp/raya_erp/customization/serial_no/: serial_no.py
raya_erp/raya_erp/doctype/api_logs/: api_logs.js  api_logs.json  api_logs.py  test_api_logs.py
raya_erp/raya_erp/doctype/attribute_type/: attribute_type.js  attribute_type.json  attribute_type.py  test_attribute_type.py
raya_erp/raya_erp/doctype/country_wise_margin/: country_wise_margin.json  country_wise_margin.py
raya_erp/raya_erp/doctype/dimension/: dimension.json  dimension.py
raya_erp/raya_erp/doctype/gem_child/: gem_child.json  gem_child.py
raya_erp/raya_erp/doctype/halo/: halo.js  halo.json  halo.py  test_halo.py
raya_erp/raya_erp/doctype/item_sub_category/: item_sub_category.js  item_sub_category.json  item_sub_category.py  test_item_sub_category.py
raya_erp/raya_erp/doctype/live_rate_config/: live_rate_config.js  live_rate_config.json  live_rate_config.py  test_live_rate_config.py
raya_erp/raya_erp/doctype/meta_tag_master/: meta_tag_master.js  meta_tag_master.json  meta_tag_master.py  test_meta_tag_master.py
(+99 files in other folders)
